--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   /*===== Colores =====*/
   --main-color: #1a740e;
   --second-color: #333;
+  --border-color: #92a1b026;
   /*===== Sizes =====*/
   --big-font-size: 2rem;
   --h2-font-size: 1.25rem;
@@ -49,6 +50,20 @@ td {
   padding: 0.5em;
 }
 
+body {
+  font-family: 'Poppins', sans-serif;
+  font-size: var(--normal-font-size);
+  line-height: 1.6;
+  background-color: #f5f5f5;
+  color: #333;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  height: 100%;
+}
+
 /* assignment */
 .assignment {
   position: fixed;
@@ -65,12 +80,12 @@ td {
   font-size: var(--h3-font-size);
   text-align: center;
   border-radius: 30px 50px 15PX 50px;
-  box-shadow: 0 1px 4px rgba(146, 161, 176, 0.15);
+  box-shadow: 0 1px 4px var(--border-color);
 }
 
 
 /* nav */
-.nav_container {
+.nav_div {
   z-index: 100;
   position: fixed;
   display: flex;
@@ -80,7 +95,7 @@ td {
   justify-content: flex-end;
   align-items: center;
   padding: 1% 8%;
-  box-shadow: 0 1px 4px rgba(146, 161, 176, 0.15);
+  box-shadow: 0 1px 4px #92a1b026;
 }
 
 nav img {
@@ -165,6 +180,66 @@ nav a {
   text-align: center;
 }
 
+.header_div {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 5%;
+  width: 100%;
+  height: 40em;
+}
+
+.header_left_box {
+  width: 60%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.header_carousel {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 85%;
+}
+
+.header_carousel img {
+  height: 100%;
+  max-width: 100%;
+}
+
+.header_right_box {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.header_slogan {
+  font-size: var(--big-font-size);
+  color: var(--main-color);
+}
+
+.header_join_btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 8em;
+  height: 3em;
+  text-align: center;
+  padding: 0.5em 1em;
+  border-radius: 5px;
+  border: 0.2em ridge var(--border-color);
+  font-weight: var(--font-semi);
+  margin-top: 2em;
+  cursor: pointer;
+}
+
 .biggerTitle {
   font-size: var(--big-font-size);
   font-weight: var(--font-semi);
@@ -177,6 +252,7 @@ nav a {
   margin: 0 auto;
 }
 
+/* feedback */
 .feedbackTable {
   display: flex;
   justify-content: center;
@@ -196,10 +272,14 @@ input#email {
   padding: 0.5em;
 }
 
-#feedback label {
-  margin-right: 10px;
+#feedback input#clear {
+  margin-right: 1em;
 }
 
-#feedback td {
-  padding: 5px;
+#feedback input {
+  padding: 0.1em 0.5em;
+}
+
+#feedback label {
+  margin-right: 10px;
 }
