--- a/style.css
+++ b/style.css
@@ -514,6 +514,13 @@ nav a {
   margin-right: 8%;
 }
 
+.footer_about img {
+  padding-left: 2%;
+  margin-bottom: -2%;
+  width: 15%;
+  height: 15%;
+}
+
 .footer_links {
   flex: 1;
   display: flex;
