--- a/style.css
+++ b/style.css
@@ -781,7 +781,8 @@ body.dark-mode .bs_price {
 body.dark-mode .bigger_title,
 body.dark-mode .nav_logo,
 body.dark-mode .header_slogan,
-body.dark-mode .materials_title {
+body.dark-mode .materials_title,
+body.dark-mode ins {
   color: var(--dark-main-color);
 }
 
@@ -797,6 +798,16 @@ body.dark-mode .header_join_btn:hover,
 body.dark-mode .offer_btn:hover {
   background-color: var(--dark-hover-main-color);
   color: var(--dark-background-color);
+}
+
+body.dark-mode input {
+  background-color: var(--dark-background-color);
+  filter: brightness(1.3);
+  color: var(--dark-text-color);
+}
+
+body.dark-mode .icon img {
+  filter: invert(1);
 }
 
 body.dark-mode .carousel_left,
